update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,34 @@
 /UNI
 /CONCH
 /checkpoints
+
+# Pipeline results
+results/
+
+# Python cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+
+# Temporary files
+*.tmp
+*.temp
